--- a/styles.css
+++ b/styles.css
@@ -139,11 +139,7 @@ img{
 
 }
 
-@media only screen and (max-width:800px){
-    img{
-        max-height: 100px;
-    }
-}
+
 
 
 ul{
@@ -222,7 +218,57 @@ p img{
 .kontakt-container i{
     transform: scale(2);
     margin-left: 40px;
+    margin-right: 40px;
 
+}
+
+@media only screen and (max-width:800px){
+    img{
+        max-height: 200px;
+        max-width: 120px;
+
+    }
+
+    html{
+        font-size: 10px;
+    }
+
+    iframe{
+        max-width: 50px;
+        max-height: 25px;
+        border-radius: 20px;
+    }
+
+    .logo{
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+    a{
+        font-size: 15px;
+        margin: 3px;
+    }
+    .logo{
+        max-width: 30px;
+    }
+
+    .aboutme-text h2{
+        font-size: 25px;
+    }
+
+    .aboutme-text p{
+        font-size: 16px;
+    }
+
+    p img{
+        max-width: 60px;
+    }
+
+    .kontakt-container{
+        transform: scale(.5);
+    }
+
+    
 }
 
 
