--- a/styles.css
+++ b/styles.css
@@ -268,6 +268,10 @@ p img{
         transform: scale(.5);
     }
 
+    @media (prefers-color-scheme: dark) {
+        /* Your css */
+      }
+
     
 }
 
