--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Roboto+Slab:wght@100;200;300;400;500;600;700&family=Ubuntu:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
-html{
+
+html {
     scroll-behavior: smooth;
     font-family: 'Work Sans', sans-serif;
     text-shadow: 1px 1px 2px rgb(5, 77, 29);
-    
+
 }
 
-body{
+body {
     background-color: #8EC3B0;
     background-image: url("img/Backgrounds/gaming_green.png");
     color: #DEF5E5;
 }
 
-header{
+header {
     background-color: #8EC3B0;
+    justify-self: center;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center; 
+    justify-content: center;
+    align-items: center;
     border-radius: 20px;
-    
-    height: 100px;  
+
+    height: 100px;
 }
 
-.logo{
+.logo {
     font-weight: bold;
     font-size: 50px;
 }
 
-.nav-bar{
+.nav-bar {
     display: flex;
     justify-content: space-evenly;
 }
 
-.aboutme{
+.aboutme {
     display: flex;
     align-items: center;
     background-color: #678a80;
@@ -45,21 +47,21 @@ header{
     border-radius: 20px;
 }
 
-.aboutme-text{
-   margin-left: 5%; 
+.aboutme-text {
+    margin-left: 5%;
 
 
 }
 
-.aboutme-text h2{
+.aboutme-text h2 {
     font-size: 40px;
 }
 
-.aboutme-text p{
+.aboutme-text p {
     font-size: 24px;
 }
 
-.skills{
+.skills {
     display: flex;
     background-color: #678a80;
     align-items: center;
@@ -73,25 +75,16 @@ header{
 
 }
 
-.skills .skills-text h2{
 
-
-}
-
-.skills .skills-text p{
-
-
-}
-
-.portfolio .title{
+.portfolio .title {
     text-align: center;
     border-radius: 20px;
 }
 
-.projekt{
+.projekt {
     background-color: #678a80;
-    display: flex;
-    justify-content:space-evenly;
+    display: grid;
+    grid-template-columns: 50% 50%;
     align-items: center;
     margin-top: 30px;
     margin-left: 2%;
@@ -99,107 +92,123 @@ header{
     border-radius: 20px;
 }
 
-.projekt-text-box{
+.projekt-text-box {
 
-flex-basis: 90%;
-margin-left: 5%;
-font-size: 150%;
-}
+    width: 95%;
+    height: 98%;
+    align-items: start;
+    font-size: 100%;
 
-.project-images{
-    flex-basis: 90%;
     margin-left: 5%;
+    margin-bottom: 2%;
 }
 
-.projekt-text-box h2{
+.project-images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-right: 2rem;
+    margin-left: 2rem;
+
+}
+
+.project-images img {
+    width: 100%;
+    height: 100%;
+
+}
+
+.projekt-text-box h2 {
     font-size: 200%;
-    font-family:Georgia, 'Times New Roman', Times, serif ;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.projekt-text-box p{
-    font-weight: 1000;
-}
-
-.projekt-text-box span{
-    font-weight: 400;
+.projekt-text-box p {
+    font-size: 100%;
 
 }
 
-.aboutme img{
+.projekt-text-box span {
+    font-size: 100%;
+
+}
+
+.aboutme img {
     margin-left: 20%;
     border-radius: 20px;
+    max-width: 40vw;
+    max-height: 40vh;
+
+}
+
+img {
     max-width: 300px;
-    max-height: 300px;
-
-}
-
-img{
-    max-height: 300px;
     border-radius: 20px;
+    margin: 5px;
 
 }
 
-
-
-
-ul{
+ul {
     list-style-position: inside;
 }
 
-p img{
+p img {
     max-width: 100px;
     max-height: 100px;
 
-    
+
 }
 
 
-.skills-text p{
+.skills-text p {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 }
 
-iframe{
+iframe {
     max-width: 400px;
     max-height: 250px;
     border-radius: 20px;
 }
 
-.title{
+.title {
     display: flex;
     background-color: #678a80;
     margin-left: 30%;
     margin-right: 30%;
     margin-top: 2%;
 
- 
+
     justify-content: center;
 }
 
-a{
+a {
     font-size: 20px;
     margin-right: 20px;
+
+
 }
 
-a:link{
+a:link {
     color: #DEF5E5;
 }
 
-a:visited{
+a:visited {
     color: #DEF5E5;
 }
 
-a:hover{
+a:hover {
     color: black;
 }
 
-header li{
-    list-style-type:none;
+header li {
+    list-style-type: none;
 }
 
-p img{
+p img {
     margin-left: 20px;
 }
 
@@ -215,13 +224,14 @@ p img{
     margin-right: 20px;
 }
 
-.kontakt-container i{
+.kontakt-container i {
     transform: scale(2);
     margin-left: 40px;
     margin-right: 40px;
 
 }
 
+/*
 @media only screen and (max-width:800px){
     img{
         max-height: 200px;
@@ -269,13 +279,9 @@ p img{
     }
 
     @media (prefers-color-scheme: dark) {
-        /* Your css */
+        
       }
 
     
 }
-
-
-
-
-
+*/
